Fix body overflow

--- a/src/pages/Index.scss
+++ b/src/pages/Index.scss
@@ -4,7 +4,6 @@ html,
 body {
   background-color: #f5f5f5;
   color: $text;
-  overflow-y: hidden;
 }
 
 .grey-bg {
